Refactoring operations /territories/*/stats
